# ant

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: cmake.yml  plugin.yml
bench/: CMakeLists.txt  bench.cpp
include/ant/: annotation.h  annotator.h  serialize.h
nix/: node-shell.nix  package.nix  shell.nix
plugin/: .envrc  CHANGELOG.md  README.md  package-lock.json  package.json
plugin/src/: extension.ts
src/: CMakeLists.txt  annotation.cpp  annotator.cpp  main.cpp
